--- a/13.todolist-1.0/views/list.ejs
+++ b/13.todolist-1.0/views/list.ejs
@@ -13,18 +13,16 @@
         <%=kindOfDay%>
     </h1>
     <ul>
-        <li> eat </li>
-        <li>sleep</li>
-        <li>code</li>
-        <li>repeat</li>
-        <li>
-            <%=newListItem%>
-        </li>
+        <% for(var i = 0; i < newListItems.length; i++) { %>
+            <li> <%= newListItems[i] %> </li>
+        <% } %>
     </ul>
 
+           
     <form class="" action="/" method="post">
         <input type="text" name="newItem">
         <button type="submit" name="button">Add</button>
+    </form>
 
 </body>
 
