--- a/14.blog-app/views/compose.ejs
+++ b/14.blog-app/views/compose.ejs
@@ -1,8 +1,12 @@
 <%- include("partials/header"); -%>
 
 <h1>Compose</h1>
+
 <form action="/compose" method="post">
+    <label>Title</label>
     <input type="text" name="postTitle">
+    <label>Post</label>
+    <textarea name="postBody" id="" cols="30" rows="5"></textarea>
     <button type="submit" name="button"> Publish </button>
 </form>
 
