--- a/14.blog-app/views/compose.ejs
+++ b/14.blog-app/views/compose.ejs
@@ -3,11 +3,13 @@
 <h1>Compose</h1>
 
 <form action="/compose" method="post">
-    <label>Title</label>
-    <input type="text" name="postTitle">
-    <label>Post</label>
-    <textarea name="postBody" id="" cols="30" rows="5"></textarea>
-    <button type="submit" name="button"> Publish </button>
+    <div class="form-group">
+        <label>Title</label>
+        <input class="form-control" type="text" name="postTitle">
+        <label>Post</label>
+        <textarea class="form-control" name="postBody" id="" cols="30" rows="5"></textarea>
+    </div>
+    <button class="btn btn-primary" type="submit" name="button"> Publish </button>
 </form>
 
 <%- include("partials/footer"); -%>
