--- a/14.blog-app/views/home.ejs
+++ b/14.blog-app/views/home.ejs
@@ -3,4 +3,9 @@
 <h1>Home</h1>
 <p> <%= startingContent %> </p>
 
+<% posts.forEach( (post)=> { %>
+    <h1> <%= post.title %> </h1>
+    <p> <%= post.body %> </p>
+<% }); %>
+
 <%- include("partials/footer"); -%>
