--- a/17.toDoList-1.2/views/list.ejs
+++ b/17.toDoList-1.2/views/list.ejs
@@ -3,15 +3,13 @@
   <div class="box" id="heading">
     <h1> <%= listTitle %> </h1>
   </div>
-
   <div class="box">
-    <% for (let i=0; i<newListItems.length; i++) { %>
+    <% newListItems.forEach((item)=>{ %>
       <div class="item">
         <input type="checkbox">
-        <p><%=  newListItems[i]  %></p>
+        <p> <%= item.name %> </p>
       </div>
-      <% } %>
-
+    <% }); %>
       <form class="item" action="/" method="post">
         <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
         <button type="submit" name="list">+</button>
@@ -19,3 +17,8 @@
   </div>
 
 <%- include("footer") -%>
+
+
+
+
+
