fixed form style

--- a/17.toDoList-1.2/views/list.ejs
+++ b/17.toDoList-1.2/views/list.ejs
@@ -5,10 +5,12 @@
   </div>
   <div class="box">
     <% newListItems.forEach((item)=>{ %>
-      <div class="item">
-        <input type="checkbox">
-        <p> <%= item.name %> </p>
-      </div>
+      <form action="">
+        <div class="item">
+          <input type="checkbox">
+          <p> <%= item.name %> </p>
+        </div>
+      </form>
     <% }); %>
       <form class="item" action="/" method="post">
         <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
