--- a/18.blog-app-1.2/partials/footer.ejs
+++ b/18.blog-app-1.2/partials/footer.ejs
@@ -2,7 +2,7 @@
 </div>
 <div class="footer-padding"></div>
   <div class="footer">
-    <p>Anand Batjargal 2019</p>
+    <p><a href="https://github.com/SalomeMM"><u>github.com/SalomeMM</u></a></p>
   </div>
 </div>
 </body>
