--- a/18.blog-app-1.2/views/about.ejs
+++ b/18.blog-app-1.2/views/about.ejs
@@ -1,6 +1,9 @@
-<%- include("partials/header"); -%>
+<%- include("partials/header") -%>
 
 <h1>About</h1>
-<p> <%= aboutContent %> </p>
 
-<%- include("partials/footer"); -%>
+<p>
+  <%= aboutContent %>
+</p>
+
+<%- include("partials/footer") -%>
