--- a/18.blog-app-1.2/views/home.ejs
+++ b/18.blog-app-1.2/views/home.ejs
@@ -1,14 +1,20 @@
-<%- include("partials/header"); -%>
+<%- include("partials/header") -%>
 
 <h1>Home</h1>
-<p> <%= startingContent %> </p>
 
-<% posts.forEach( (post)=> { %>
-    <h1> <%= post.title %> </h1>
-    <p>
-        <%= post.body.substring(0, 100) + " ...." %> %>
-        <a href="posts/<%= post.title %>>"> Read More </a>
-    </p>
-<% }); %>
+<p>
+  <%= homeStartingContent %>
+</p>
 
-<%- include("partials/footer"); -%>
+<% posts.forEach(function(post){ %>
+<h1>
+  <%= post.title %>
+</h1>
+<p>
+  <%= post.body %>
+  <a href="<%= "/posts/" + post.id %>">Read More</a>
+</p>
+<% });%>
+
+
+<%- include("partials/footer") -%>
