--- a/18.blog-app-1.2/views/post.ejs
+++ b/18.blog-app-1.2/views/post.ejs
@@ -1,6 +1,6 @@
-<%- include("partials/header"); -%>
+<%- include("partials/header") -%>
 
-<h1> <%= title %> </h1>
-<p> <%= content %> </p>
+<h1><%=postTitle%></h1>
+<p><%=postBody%></p>
 
-<%- include("partials/footer"); -%>
+<%- include("partials/footer") -%>
