--- a/18.blog-app-1.2/views/partials/footer.ejs
+++ b/18.blog-app-1.2/views/partials/footer.ejs
@@ -2,7 +2,7 @@
 </div>
 <div class="footer-padding"></div>
   <div class="footer">
-    <p>Anand Batjargal 2019</p>
+    <p>Shobham Rajak 2021</p>
   </div>
 </div>
 </body>
